# finhay-test

./: .gitignore  README.md  analytics.py  analytics_output.html  config.py  data_quality_report.json  ingest.py  main.py  market_data.db  pyproject.toml  quality_check.py  requirements.txt  test_pipeline.py
